最も使用したオカズ集計API
