# openapi.yaml
@@ -378,6 +378,58 @@ paths:
           description: ユーザーがチェックイン履歴を公開していない場合
         404:
           description: 存在しないユーザー
+  /v1/users/{name}/stats/links:
+    get:
+      summary: 最も使用したオカズ
+      description: |
+        指定したユーザーが期間内に最も使用したオカズの上位10件を取得します。
+
+        ### 範囲指定について
+        負荷を抑えるため、集計範囲を最大1年分に制限しています。
+
+        `since` のみを指定した場合はその日から1年分、`until` のみを指定した場合はその日までの1年分を集計します。
+
+        両方指定した場合で1年以上の範囲を指定すると `since` から1年分までに制限して集計します。
+
+        どちらも指定しなかった場合は、今年1年分のデータを集計します。
+      tags:
+        - user-stats
+      parameters:
+        - name: name
+          in: path
+          required: true
+          description: ユーザー名
+          schema:
+            type: string
+        - name: since
+          in: query
+          description: 集計範囲の開始日
+          required: false
+          schema:
+            type: string
+            format: date
+            example: 2020-07-21
+        - name: until
+          in: query
+          description: 集計範囲の終了日
+          required: false
+          schema:
+            type: string
+            format: date
+            example: 2021-07-21
+      responses:
+        200:
+          description: 成功
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/MostlyUsedLink'
+        403:
+          description: ユーザーがチェックイン履歴を公開していない場合
+        404:
+          description: 存在しないユーザー
   /v1/checkins:
     post:
       summary: チェックインの作成
@@ -1122,6 +1174,19 @@ components:
           type: string
           maxLength: 255
           description: タグ
+        count:
+          type: integer
+          description: 使用回数
+    MostlyUsedLink:
+      type: object
+      required:
+        - name
+        - count
+      properties:
+        link:
+          type: string
+          description: オカズリンク
+          example: http://example.com
         count:
           type: integer
           description: 使用回数
